--- a/templates/adversaire/adversaire.hbs
+++ b/templates/adversaire/adversaire.hbs
@@ -1,5 +1,6 @@
 {{!log "adversaire" this}}
 <section class="adversaire-main standard-form">
+    <div class="adversaire-titre"><br><h4>{{ localize 'PENOMBRE.Feuille.adversaire' }}</h4></div>
 
     <!-- Personnage -->
     {{> "systems/penombre/templates/adversaire/partials/personnage.hbs" }}
