--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -1,4 +1,5 @@
 {{log "personnage" this}}
+{{log "harmoniquesChoices" harmoniquesChoices}}
 <div class="adversaire-personnage">
     <div class="logo-frame">
       <img class="logo-img" src="{{document.img}}" {{#if unlocked}}data-action="editImage"{{/if}} data-tooltip="{{document.name}}"/>
@@ -25,7 +26,9 @@
             <div class="attribut">
                 <label>{{ localize 'PENOMBRE.Adversaire.FIELDS.dissonance.valeur.label' }}</label> {{numberInput system.dissonance.valeur min=0 max=maxDissonance step=1 name="system.dissonance.valeur" }} /  {{formInput systemFields.dissonance.fields.max value=systemSource.dissonance.max localize=true disabled=locked}}
                 {{#if unlocked}}
+                 <select name="system.dissonance.harmonique">
                 {{selectOptions harmoniquesChoices selected=systemSource.dissonance.harmonique valueAttr="key" labelAttr="label"}}
+                </select>
                 {{else}}
                 <div class="form-fields harmonique">{{localize (concat "PENOMBRE.Harmonique." system.dissonance.harmonique ".label")}}</div>
                 {{/if}}
