--- a/penombre.css
+++ b/penombre.css
@@ -1449,8 +1449,11 @@ body.theme-dark .penombre.adversaire .adversaire-content {
   font-size: 17px;
   clear: both;
 }
-.penombre.adversaire .adversaire-content .adversaire-main {
+.penombre.adversaire .adversaire-content {
   overflow-y: auto;
+}
+.penombre.adversaire .adversaire-content .adversaire-main {
+  width: 100%;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-titre {
   background-color: #124b63;
@@ -1482,13 +1485,13 @@ body.theme-dark .penombre.adversaire .adversaire-content {
   gap: 10px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos input {
-  margin: 0 5px;
   text-align: center;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-left: 20px;
   margin-bottom: 10px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom label {
@@ -1519,7 +1522,7 @@ body.theme-dark .penombre.adversaire .adversaire-content {
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut {
   display: flex;
   align-items: left;
-  margin: 0 20px;
+  margin-left: 20px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut label {
   font-family: "CattedraleDemo";
@@ -1530,6 +1533,10 @@ body.theme-dark .penombre.adversaire .adversaire-content {
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut input {
   margin: 0 5px;
   width: 50px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut select {
+  margin: 0 5px;
+  width: 120px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut .harmonique {
   margin: 0 5px;
