Renommage harmoniquesChoices en harmoniqueValueChoices

--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -15,7 +15,7 @@
               </div>
               {{#if unlocked}}
               <select name="system.harmoniques.nuit.valeur" class="de-de-nuit-saisie editer-harmoniques absolue">
-                {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.nuit.valeur localize=true}}
+                {{selectOptions harmoniqueValueChoices selected=systemSource.harmoniques.nuit.valeur localize=true}}
               </select>
               {{else}}
                 <div class="de-de-nuit absolue">
@@ -38,7 +38,7 @@
               </div>
               {{#if unlocked}}
               <select name="system.harmoniques.ame.valeur" class="de-d-ame-saisie editer-harmoniques absolue">
-                {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.ame.valeur localize=true}}
+                {{selectOptions harmoniqueValueChoices selected=systemSource.harmoniques.ame.valeur localize=true}}
               </select>
               {{else}}
                 <div class="de-d-ame absolue">
@@ -60,7 +60,7 @@
               </div>
               {{#if unlocked}}
               <select name="system.harmoniques.nature.valeur" class="de-de-nature-saisie editer-harmoniques absolue">
-                {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.nature.valeur localize=true}}
+                {{selectOptions harmoniqueValueChoices selected=systemSource.harmoniques.nature.valeur localize=true}}
               </select>
               {{else}}
                 <div class="de-de-nature absolue">
@@ -83,7 +83,7 @@
               </div>
               {{#if unlocked}}
               <select name="system.harmoniques.esprit.valeur" class="de-d-esprit-saisie editer-harmoniques absolue">
-                {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.esprit.valeur localize=true}}
+                {{selectOptions harmoniqueValueChoices selected=systemSource.harmoniques.esprit.valeur localize=true}}
               </select>
               {{else}}
                 <div class="de-d-esprit absolue">
@@ -107,7 +107,7 @@
               </div>
               {{#if unlocked}}
               <select name="system.harmoniques.etincelle.valeur" class="de-d-etincelle-saisie editer-harmoniques absolue">
-                {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.etincelle.valeur localize=true}}
+                {{selectOptions harmoniqueValueChoices selected=systemSource.harmoniques.etincelle.valeur localize=true}}
               </select>
               {{else}}
                 <div class="de-d-etincelle absolue">
