--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -67,6 +67,9 @@ body {
             height: 175px;
             width: 175px;
           .logo-img {
+            border: solid;
+            border-width: 2.5px;
+            border-color: @color-blue;
             height: 175px;
             width: auto;
             max-width: 100%;
