Align-selft des titres d'Adversaires + 1 ligne pour Conscience actuelle et max

--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -51,16 +51,6 @@ body {
     overflow-y: auto;
     .adversaire-main {
       width: 100%;
-      .adversaire-titre {
-        background-color: @color-blue;
-        text-align: center;
-        h4 {
-            font-family: @font-cattedrale;
-            font-weight: normal;
-            color: @color-primary-clear;
-            text-transform: uppercase;
-        }
-      }
       .adversaire-personnage {
         display: flex;
         .logo-frame {
@@ -120,6 +110,7 @@ body {
               align-items: left;
               margin-left: 20px;
               label {
+                align-self: center;
                 font-family: @font-cattedrale;
                 display: inline-block;
                 width: 120px;
