--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -341,6 +341,20 @@ body {
               .col-1-2 {
                 float: left;
                 width: 212px;
+
+                div {
+                  display: table;
+
+                  span {
+                    float: none;
+                    clear: both;
+                    height: 15px;
+
+                    &.description {
+                      height: auto;
+                    }
+                  }
+                }
               }
 
               .col-2-2 {
@@ -519,36 +533,35 @@ body {
 
       .eminence-conscience-locked {
         min-height: 725px;
+
+        .col-3-1 {
+            .col-1-3 {
+                display: flex;
+                flex-direction: column;
+                .ligne-conscience {
+                    display: flex;
+                    align-items: center;
+                    align-content: center;
+                    margin-left: 20px;
+                    height: 32px;
+                    label {
+                        font-family: @font-cattedrale;
+                        display: inline-block;
+                        width: 120px;
+                        font-weight: bold;
+                    }
+                    span {
+                        margin: 0 5px;
+                        width: 50px;
+                    }
+                }
+            }
+        }
       }
 
       .eminence-conscience-unlocked {
         min-height: 685px;
       }
-
-      /*
-      // Styles de texte avec classes utilitaires
-      .text {
-        .font-doree {
-          color: @color-accent;
-        }
-
-        .font-grise {
-          color: @color-secondary;
-        }
-
-        .font-marron {
-          color: @color-primary;
-        }
-
-        .font-chocolate {
-          font-family: @font-chocolate;
-        }
-
-        .font-cattedrale {
-          font-family: @font-cattedrale;
-        }
-      }
-      */
 
       // Section conscience
       .eminence-conscience {
