parenthèses autour de l'harmonique de Dissonance Adversaire

--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -29,7 +29,7 @@
                     {{selectOptions harmoniquesChoices selected=systemSource.dissonance.harmonique}}
                 </select>
                 {{else}}
-                <div class="form-fields harmonique">{{localize (concat "PENOMBRE.Harmonique." system.dissonance.harmonique ".label")}}</div>
+                <div class="form-fields harmonique">({{localize (concat "PENOMBRE.Harmonique." system.dissonance.harmonique ".label")}})</div>
                 {{/if}}
             </div>
             {{/if}}
