--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -65,6 +65,19 @@ body {
             max-width: 100%;
             display: block;
           }
+          .logo-img-unlocked {
+            border: solid;
+            border-width: 2.5px;
+            border-color: @color-blue;
+            height: 175px;
+            width: auto;
+            max-width: 100%;
+            display: block;
+            &:hover {
+              cursor: pointer;
+            }
+          }
+
         }
         .infos {
           flex: 1;
