--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -518,6 +518,16 @@ body {
             max-width: 100%;
             display: block;
           }
+          .logo-img-unlocked {
+            border-radius: @border-radius;
+            height: 150px;
+            width: auto;
+            max-width: 100%;
+            display: block;
+             &:hover {
+              cursor: pointer;
+            }
+          }
         }
 
         .data {
