--- a/templates/eminence/partials/personnage.hbs
+++ b/templates/eminence/partials/personnage.hbs
@@ -5,7 +5,7 @@
   </div>
   <div class="col-3-1">
     <div class="logo-frame">
-      <img class="logo-img" src="{{document.img}}" {{#if unlocked}}data-action="editImage"{{/if}} data-tooltip="{{document.name}}"/>
+      <img class="logo-img{{#if unlocked}}-unlocked{{/if}}" src="{{document.img}}" {{#if unlocked}}data-action="editImage"{{/if}} data-tooltip="{{document.name}}"/>
     </div>
     <div class="data">
       {{formGroup fields.name value=document.name localize=true disabled=locked}}
