--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -75,6 +75,7 @@ body {
             display: block;
             &:hover {
               cursor: pointer;
+              box-shadow: 0px 0px 0px 0.75px @color-blue;
             }
           }
 
