--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -526,6 +526,8 @@ body {
             display: block;
              &:hover {
               cursor: pointer;
+              box-shadow: 0px 0px 0px 2.5px @color-primary;
+
             }
           }
         }
