--- a/templates/chat/harmonique-roll.hbs
+++ b/templates/chat/harmonique-roll.hbs
@@ -12,19 +12,25 @@
       </div>
     {{/if}}
   {{/if}}
-  {{#if (and isActionPrincipale hasDifficulte)}}
-    Succès : {{nbSucces}} {{#if hasAutresSucces}}/ Autres succès : {{#each autresSucces}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/each}}{{/if}} <br>
-    Total : {{totalSucces}} <br>
-    Difficulté : {{difficulte}} <br>
-    {{#if isSuccess}}
-      C'est une réussite !
+  <div class="roll-results">
+    <div class="roll-result-self">
+      Succès : {{nbSucces}}
+    </div>
+    {{#unless actionCollegiale}}
+      <div class="roll-result-total">
+        {{#if hasDifficulte}}
+          Difficulté : {{difficulte}} <br />
+          {{#if isSuccess}}
+            C'est une réussite !
+          {{else}}
+            C'est un échec !
+          {{/if}}
+        {{/if}}
+      </div>
     {{else}}
-      C'est un échec !
-    {{/if}}
-  {{else}}
-    Succès : {{nbSucces}} {{#if hasAutresSucces}}/ Autres succès : {{#each autresSucces}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/each}}{{/if}} <br>
-    Total : {{totalSucces}}
-  {{/if}}
+      <div class="roll-result-other"></div>
+    {{/unless}}
+  </div>
   {{#if icon}}
     <span class="part-method" data-tooltip aria-label="{{localize method}}">
       {{{icon}}}
